unleash the magic
